[metadata]
name = UnicodeEngine_RPG
version = 0.1.1
author = megat69
description = An engine that allows to render worlds and maps for console games based solely on Unicode.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/megat69/UnicodeEngine_RPG
project_urls =
    Bug Tracker = https://github.com/megat69/UnicodeEngine_RPG/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src